--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -2,3 +2,26 @@
 .navbar {
     background-color: #373656;
 }
+
+html {
+    background-color: #f2f1ff;
+}
+
+body {
+    background-color: transparent;
+}
+
+.page-body {
+    background-color: white;
+    border-radius: 14px;
+    padding: 15px;
+    margin-top: 1rem;
+}
+
+@media only screen and (max-width: 600px) {
+    .page-body {
+        margin-top: 0.5rem;
+        margin: 0.5rem;
+        width: initial;
+    }
+}
