Massive improvements to login/sign up system. - Implemented sessions - Implemented login and sign up form validation - Implemented password hashing - Admin page is now only visible to admin users

--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -18,6 +18,11 @@ body {
     margin-top: 1rem;
 }
 
+.required-asterisk::after {
+    content: "*";
+    color: red;
+}
+
 @media only screen and (max-width: 600px) {
     .page-body {
         margin-top: 0.5rem;
