--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -14,7 +14,8 @@ body {
 .page-body {
     background-color: white;
     border-radius: 14px;
-    padding: 15px;
+    padding: 30px;
+    padding-top: 15px;
     margin-top: 1rem;
 }
 
