--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -35,6 +35,17 @@ body {
     border-color: rgba(255,255,255,0.3);
 }
 
+.reservation-times-container {
+    
+}
+
+.reservation-times-container > .reservation-times-body > .reservation-times-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-auto-rows: 40px;
+    grid-gap: 12px;
+}
+
 @media only screen and (max-width: 600px) {
     .page-body {
         margin-top: 0.5rem;
