--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -1,6 +1,11 @@
 
+:root {
+    --main-bg-color: #373656;
+    --main-bg-color-light: #4541a3;
+}
+
 .navbar {
-    background-color: #373656;
+    background-color: var(--main-bg-color);
 }
 
 html {
@@ -44,6 +49,10 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-auto-rows: 40px;
     grid-gap: 12px;
+}
+
+.sign-in-popup-header {
+    background-color: var(--main-bg-color-light);
 }
 
 @media only screen and (max-width: 600px) {
